--- a/console/views/client.jade
+++ b/console/views/client.jade
@@ -38,18 +38,23 @@ block content
 		div(class="panel panel-primary")
 			div(class="panel-heading")
 				h3(class="panel-title") Policies for Active Bundle
-			div(class="panel-body")
+			div(class="panel-body" style='margin-top:20px')
+				//OK button(type="button", class='btn btn-primary pull-up', style='margin-top:10px; margin-bottom:10px' ) Include applicable policies
+				button(type="button", class='btn btn-primary', style='margin-bottom:10px' ) Include applicable policies
 				div(class="panel-group" id="accordion_p")
 					div(class="panel panel-default", id='collapse_p_panel')
 						div(class="panel-heading")
 							h4
-								button(type="button", class="btn btn-primary pull-right" ) Include applicable policies
-								label(for='policy1' style='margin-left:10px; font-size:15px ' ) Policy 11 ............................................................................
+								label(for='policy1' style='margin-left:10px; font-size:15px ' ) Policy 1 ............................................................................
 								input(type='checkbox', name='checkbox_pol1', class='checkboxpol1', text='Enable policy 1 for AB', style='margin-left:20px')
 						div(class='panel-body')
-							pre='abc'
-							label(for='policy1' style='margin-left:10px; font-size:15px ' ) Policy 1 ............................................................................
-
+				div(class="panel-group" id="accordion_p2")
+					div(class="panel panel-default", id='collapse_p_panel2')
+						div(class="panel-heading")
+							h4
+								label(for='policy1' style='margin-left:10px; font-size:15px ' ) Policy 2 ............................................................................
+								input(type='checkbox', name='checkbox_pol1', class='checkboxpol1', text='Enable policy 1 for AB', style='margin-left:20px')
+						div(class='panel-body')
 		// div(class="panel panel-primary")
 		// 	div(class="panel-heading")
 		// 		h3(class="panel-title") Policies for Active Bundle
