Button "Select All" added - to select all the checkboxes for all data items to add them to the AB

--- a/console/views/client.jade
+++ b/console/views/client.jade
@@ -14,6 +14,8 @@ block content
 			div(class="panel-heading")
 				h3(class="panel-title") Data for Active Bundle
 			div(class="panel-body")
+				//9 Feb. div(class='col-xs-3 top-buffer')
+				button(type='submit' class='btn_select btn-primary update-service' style='margin-left:610px; margin-top:10px') Select All
 				//30 Jan form(class='form-inline top-buffer' method = "POST" action = "/create")
 				//- handle button event in client.js
 				form(class='form-inline top-buffer' method='post' action='#')
@@ -52,8 +54,8 @@ block content
 					div(class="panel panel-default", id='collapse_p_panel2')
 						div(class="panel-heading")
 							h4
-								label(for='policy1' style='margin-left:10px; font-size:15px ' ) Policy 2 ............................................................................
-								input(type='checkbox', name='checkbox_pol1', class='checkboxpol1', text='Enable policy 1 for AB', style='margin-left:20px')
+								label(for='policy2' style='margin-left:10px; font-size:15px ' ) Policy 2 ............................................................................
+								input(type='checkbox', name='checkbox_pol2', class='checkboxpol2', text='Enable policy 2 for AB', style='margin-left:20px')
 						div(class='panel-body')
 		// div(class="panel panel-primary")
 		// 	div(class="panel-heading")
