More attributes to static label for policy added, i.e. name id class placeholder

--- a/console/views/client.jade
+++ b/console/views/client.jade
@@ -47,14 +47,14 @@ block content
 					div(class="panel panel-default", id='collapse_p_panel')
 						div(class="panel-heading")
 							h4
-								label(for='policy1' style='margin-left:10px; font-size:15px ' ) Policy 1 ............................................................................
+								label(name='polic1' for='policy1' id='policy1' class='pol1' placeholder='pol1' style='margin-left:10px; font-size:15px ' ) Policy 1 ............................................................................
 								input(type='checkbox', name='checkbox_pol1', class='checkboxpol1', text='Enable policy 1 for AB', style='margin-left:20px')
 						div(class='panel-body')
 				div(class="panel-group" id="accordion_p2")
 					div(class="panel panel-default", id='collapse_p_panel2')
 						div(class="panel-heading")
 							h4
-								label(for='policy2' style='margin-left:10px; font-size:15px ' ) Policy 2 ............................................................................
+								label(name='polic2' for='policy2' id='policy2' class='pol2' placeholder='pol2' style='margin-left:10px; font-size:15px ' ) Policy 2 ............................................................................
 								input(type='checkbox', name='checkbox_pol2', class='checkboxpol2', text='Enable policy 2 for AB', style='margin-left:20px')
 						div(class='panel-body')
 		// div(class="panel panel-primary")
