'environment' column of table 'Policy' has been renamed to 'rules' - thus 'placeholder' attribute of input(name='credlimit' ... ) has been also changed from placeholder=tuple.environment  to placeholder=tuple.rules. This affects only first policy 'Payment type policy' which has a 'credit card limit' input field editable by user

--- a/console/views/client.jade
+++ b/console/views/client.jade
@@ -54,13 +54,13 @@ block content
 								div(class="panel-heading")
 									h4
 										input(type='checkbox', name='chk_pol' + tuple.id, class='checkboxpol' + tuple.id, text='Enable policy for AB', style='margin-left:20px')
-										//OK 12 Feb. label(name='policy' + tuple.id id='pol' + tuple.id class='policy_'  + tuple.id placeholder=tuple.policy + ' ; ' + tuple.environment style='margin-left:10px; font-size:15px ' ) tuple.policy
+										//OK 12 Feb. label(name='policy' + tuple.id id='pol' + tuple.id class='policy_'  + tuple.id placeholder=tuple.policy + ' ; ' + tuple.rules style='margin-left:10px; font-size:15px ' ) tuple.policy
 										label(name=tuple.rules id='pol' + tuple.id class='policy_'  + tuple.id placeholder=tuple.policy  style='margin-left:10px; font-size:15px ' ) Policy text
 										select(id='req-data' + tuple.id class='dropdown' + tuple.id, style='margin-left:10px; font-size:15px')
 											//16 Feb. option=tuple.rules
 										if (tuple.id == 1)
 											label(for='credlimit' + tuple.id style='margin-left:50px; font-size:15px') Credit Limit
-											input(name='credlimit' + tuple.id type='text' id='credlim' + tuple.id class='credlimit' + tuple.id placeholder=tuple.environment  style='margin-left:10px; font-size:15px')
+											input(name='credlimit' + tuple.id type='text' id='credlim' + tuple.id class='credlimit' + tuple.id placeholder=tuple.rules  style='margin-left:10px; font-size:15px')
 										// else
 										// 	console.log('id <> ' + tuple.id)
 										// //11 Feb. - add labels for rating for every policy
