class name for emergency checkbox has been changed from emcheckbox to   emrgcheckbox

--- a/console/views/scenario.jade
+++ b/console/views/scenario.jade
@@ -46,7 +46,7 @@ html(lang='en')
 								if (name == "Pervasive Healthcare Scenario") 
 									label(for='patidtext' style='margin-left:10px') Patient ID
 									input(name='patidtext' type='text' id='inputpid' class='inputpatid' placeholder='0005'  style='margin-left:10px')
-									input(type="checkbox", name='emcheckbox_' , class='emcheckbox' , text="Turn on emergency mode" style='margin-left:10px')
+									input(type="checkbox", name='emcheckbox_' , class='emrgcheckbox' , text="Turn on emergency mode" style='margin-left:10px')
 									label(name=emrg  id='emr' class='emr_text'  placeholder='temp'  style='margin-left:10px' ) Emergency
 							div(class='col-md-4')
 								button(class='btn btn-primary try-it', data-link=access_url) Try It
