--- a/console/views/client.jade
+++ b/console/views/client.jade
@@ -50,25 +50,51 @@ block content
 					//28 Feb. button(type="button", class='btn btn-primary', style='margin-bottom:10px' ) Include applicable policies
 					div(class="panel-group" id="accordion_p")
 						div(class="panel panel-default", id='pol_panel')
-							for tuple in entries_pol
-								div(class="panel-heading")
-									h4
-										input(type='checkbox', name='chk_pol' + tuple.id, class='checkboxpol' + tuple.id, text='Enable policy for AB', style='margin-left:20px')
-										//OK 12 Feb. label(name='policy' + tuple.id id='pol' + tuple.id class='policy_'  + tuple.id placeholder=tuple.policy + ' ; ' + tuple.rules style='margin-left:10px; font-size:15px ' ) tuple.policy
-										label(name=tuple.policy  id='polres' + tuple.id class='policy_res_' + tuple.id  placeholder=tuple.resource  style='margin-left:10px; font-size:15px ' ) Policy text
-										label(name=tuple.rules id='pol' + tuple.id class='policy_'  + tuple.id placeholder=tuple.policy  style='margin-left:40px; font-size:15px ' ) Policy rules
-										select(id='req-data' + tuple.id class='dropdown' + tuple.id, style='margin-left:10px; font-size:15px')
-										div(class='form-group')
-											label(for='srv-name' class='col-sm-2 control-label') Subject
-											div(class='col-xs-3')
+							//newly added table, 20 Mar. 
+							div(class="panel-body")
+								table(class="table table-striped table-hover")
+									tr
+										th Select
+										th ID
+										th Policy
+										th Resource
+										th Rules
+										th Subject
+										th Misc
+									for tuple in entries_pol
+										tr
+											td 
+												input(type='checkbox', name='chk_pol' + tuple.id, class='checkboxpol' + tuple.id, text='Enable policy for AB', style='margin-left:5px')
+											td=tuple.id	
+											td=tuple.policy
+											td=tuple.resource
+											td
+												label(name=tuple.rules id='pol' + tuple.id class='policy_'  + tuple.id placeholder=tuple.policy  style='margin-left:1px' ) Minimum rating: 
+												select(id='req-data' + tuple.id class='dropdown' + tuple.id, style='margin-left:10px; font-size:15px')
+											td
 												select(id='srv-name' class='form-control')
 													for srv_name in entries_srv
-														option=srv_name.display_name	
-										if (tuple.id == 1)
-											label(for='credlimit' + tuple.id style='margin-left:50px; font-size:15px') Credit Limit
-											input(name='credlimit' + tuple.id type='text' id='credlim' + tuple.id class='credlimit' + tuple.id placeholder=tuple.rules  style='margin-left:5px; font-size:15px')
-										// else
-										// 	console.log('id <> ' + tuple.id)
-										// //11 Feb. - add labels for rating for every policy
-										//11 Feb. For policy 1 - add label for credit limit 
-										//label(name='policy' + tuple.id id='pol' + tuple.id class='policy_'  + tuple.id placeholder=tuple.policy style='margin-left:10px; font-size:15px ' ) tuple.policy
+														option=srv_name.display_name
+											td
+												if (tuple.id == 1)
+													label(for='credlimit' + tuple.id style='margin-left:5px') Credit Limit
+													input(name='credlimit' + tuple.id type='text' id='credlim' + tuple.id class='credlimit' + tuple.id placeholder=tuple.rules  style='margin-left:5px; font-size:15px')		
+							// worked until 20 Mar. Now the same functionality
+							// //is implemented in the table above							
+							// for tuple in entries_pol
+							// 	div(class="panel-heading")
+							// 		h4
+							// 			input(type='checkbox', name='chk_pol' + tuple.id, class='checkboxpol' + tuple.id, text='Enable policy for AB', style='margin-left:20px')
+							// 			//OK 12 Feb. label(name='policy' + tuple.id id='pol' + tuple.id class='policy_'  + tuple.id placeholder=tuple.policy + ' ; ' + tuple.rules style='margin-left:10px; font-size:15px ' ) tuple.policy
+							// 			label(name=tuple.policy  id='polres' + tuple.id class='policy_res_' + tuple.id  placeholder=tuple.resource  style='margin-left:10px; font-size:15px ' ) Policy text
+							// 			label(name=tuple.rules id='pol' + tuple.id class='policy_'  + tuple.id placeholder=tuple.policy  style='margin-left:40px; font-size:15px ' ) Policy rules
+							// 			select(id='req-data' + tuple.id class='dropdown' + tuple.id, style='margin-left:10px; font-size:15px')
+							// 			div(class='form-group')
+							// 				label(for='srv-name' class='col-sm-2 control-label') Subject
+							// 				div(class='col-xs-3')
+							// 					select(id='srv-name' class='form-control')
+							// 						for srv_name in entries_srv
+							// 							option=srv_name.display_name	
+							// 			if (tuple.id == 1)
+							// 				label(for='credlimit' + tuple.id style='margin-left:50px; font-size:15px') Credit Limit
+							// 				input(name='credlimit' + tuple.id type='text' id='credlim' + tuple.id class='credlimit' + tuple.id placeholder=tuple.rules  style='margin-left:5px; font-size:15px')
