--- a/console/views/scenario.jade
+++ b/console/views/scenario.jade
@@ -22,6 +22,35 @@ html(lang='en')
 				div(class='panel panel-default text-center')
 					h3=name
 			div(class='col-md-8')
+				//new container for Medical scenario configuration						
+				if (name == "Pervasive Healthcare Scenario")
+					div(class='panel panel-default')
+						div(class='panel-heading text-center')
+							h4 Medical Scenario Configuration
+						div(class='panel-body')
+							div(class='input-group')
+								for service in services
+									div(class='row top-buffer')
+										div(id=service.status, class='col-md-2 svc_status')=service.status
+										div(id=service.status + '_' + service.id, class='col-md-5 svc_name')=service.display_name
+										div(class='col-md-5')
+											if (service.id == 6)
+												input(name='doctdatakey_a' + service.id type='text' id='doctdatkey_a' + service.id class='doctinputkey_a' + service.id placeholder='test_prescription'  style='margin-left:1px')
+												input(name='doctdatavalue_a' + service.id type='text' id='doctdataval_a' + service.id  class='doctinputval_a' + service.id placeholder='blood_test'  style='margin-left:1px')
+												br
+												input(name='doctdatakey_b' + service.id type='text' id='doctdatkey_b' + service.id class='doctinputkey_b' + service.id placeholder='prescription'  style='margin-left:1px')
+												input(name='doctdatavalue_b' + service.id type='text' id='doctdataval_b' + service.id  class='doctinputval_b' + service.id placeholder='Omeprazole'  style='margin-left:1px')
+											else if (service.id == 7) 
+												input(name='labdatakey' + service.id type='text' id='labdatkey' + service.id class='labinputkey' + service.id placeholder='blood_sugar'  style='margin-left:1px')
+												input(name='labdatavalue' + service.id type='text' id='labdataval' + service.id  class='labinputval' + service.id placeholder='92'  style='margin-left:1px')
+								div(class='row top-buffer')
+									center
+										div(class='col-md-6')
+											div
+												button(id='btn_toggle_svc', class='btn btn-danger svc_toggle') Stop
+										div(class='col-md-6')
+											button(id='btn_update_tl', class='btn btn-default') Update
+
 				div(class='panel panel-default')
 					div(class='panel-heading text-center')
 						h4 Scenario Topology
@@ -41,14 +70,6 @@ html(lang='en')
 					div(class='panel-body')
 						div(class='row')
 							div(class='col-md-8')=access_url
-								//draw emergency checkbox and Patient ID textbox only in healthcare scenario
-								//WORKS OK! if (access_url == "http://localhost:4201/ehr")
-								if (name == "Pervasive Healthcare Scenario")
-									label(for='patidtext' style='margin-left:10px') Patient ID
-									input(name='patidtext' type='text' id='inputpid' class='inputpatid' placeholder='0005'  style='margin-left:10px')
-									br
-									input(type="checkbox", name='emcheckbox_' , class='emrgcheckbox' , text="Turn on emergency mode" style='margin-left:10px')
-									label(name=emrg  id='emr' class='emr_text'  placeholder='temp'  style='margin-left:10px' ) Emergency
 							div(class='col-md-4')
 								button(class='btn btn-primary try-it', data-link=access_url) Try It
 			div(class='col-md-4')
